# plexus-core

./: .gitignore  Cargo.toml
.hyperforge/: config.toml
docs/architecture/: 16671157983707995647_authentication-framework.md
src/: lib.rs  mcp_bridge.rs  request.rs
src/activations/echo/: activation.rs  mod.rs
src/activations/health/: activation.rs
src/plexus/: auth.rs  credential_envelope.rs  forward_registry.rs  mod.rs  plexus.rs  schema.rs  scope_gate.rs  streaming.rs  test_validator.rs
tests/: auth_capabilities_info.rs  auth_integration.rs  forward_policy_dispatch.rs  golden_schema.rs  scope_gate_dispatch.rs  site_hint_emission.rs
tests/golden/: solar.json
