[package]
name = "plexus-core"
version = "0.5.2"
edition = "2021"
description = "Core infrastructure for Plexus RPC: Activation trait, DynamicHub, schemas"
license = "AGPL-3.0-only"

[lib]
name = "plexus_core"
path = "src/lib.rs"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
futures-core = "0.3"
futures-util = "0.3"
async-trait = "0.1"
async-stream = "0.3"

# Bitflags for ChildCapabilities
bitflags = "2"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Schema generation
schemars = { version = "1.1", features = ["derive", "uuid1"] }

# HTTP types for RawRequestContext
http = "1"

# Core types
uuid = { version = "1.6", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"

# JSON-RPC server
jsonrpsee = { version = "0.26", features = ["server", "macros"] }

# MCP server
rmcp = { version = "0.12", features = ["server", "transport-io", "transport-streamable-http-server"] }

# Hub macro for activation generation
plexus-macros = { path = "../plexus-macros", version = "0.5.0" }

# Sealed-type auth primitives. plexus-core re-exports AuthContext /
# VerifiedUser / Principal from here for backward compatibility. New code
# should import directly from plexus-auth-core. Per AUTHZ-CORE-CRATE-1.
plexus-auth-core = { path = "../plexus-auth-core", version = "0.1" }

[dev-dependencies]
tempfile = "3"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tokio-test = "0.4"

# Enable the `test-support` feature for plexus-auth-core in test builds
# only, so the end-to-end credential-envelope tests in
# `src/plexus/credential_envelope.rs` can mint real `Credential<T>`
# values. Added by AUTHZ-CRED-CORE-1B as part of wiring CRED-CORE-2's
# deferred end-to-end ACs (#1, #2 full, #4 end-to-end, #5 end-to-end).
plexus-auth-core = { path = "../plexus-auth-core", version = "0.1", features = ["test-support"] }
